# task-monitor-slurm

./: README.md  config.py  pyproject.toml  slurm_monitor.py  telegram_notify.py
monitor-slurm/: __init__.py  cli.py  slurm_monitor.py
monitor_slurm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tasks_monitor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
