[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-slurm"
version = "0.1.0"
dependencies = [
    "python-telegram-bot>=21.2",
	"python-dotenv>=0.15.0"
]
requires-python = ">=3.9"
authors = [
  {name = "Carl Li", email = "jiaying.liac@gmail.com"},
]
description = "Monitor SLURM jobs and receive notifications via Telegram."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["telegram-bot", "task-monitor", "bot", "tasks", "SLURM"]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
monitor-slurm = "monitor_slurm.cli:main"
